Add TCP connection management and enhance CI workflow for Windows support
- Introduced new functionality to manage TCP connections, including pagination support for retrieving connection details.
- Updated the CI workflow to include Windows-specific dependencies and build steps, ensuring compatibility across platforms.
- Refactored the Tauri application to utilize TCP sockets for IPC communication, replacing Unix domain sockets for improved cross-platform functionality.
- Enhanced the HTTP proxy implementation for better request handling and metrics capture.

This update significantly improves the application's capabilities for managing TCP connections and ensures a seamless experience across different operating systems.

--- a/apps/localup-desktop/src-tauri/Cargo.toml
+++ b/apps/localup-desktop/src-tauri/Cargo.toml
@@ -52,6 +52,10 @@ regex = "1"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
+# Windows process management (for daemon)
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
+
 [features]
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
