--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -197,36 +197,11 @@ jobs:
           path: release/*
           retention-days: 1
 
-  # Build Tauri desktop app for all platforms
+  # Build Tauri desktop app (Windows only)
   build-tauri:
-    name: Build Desktop App (${{ matrix.platform }})
+    name: Build Desktop App (Windows)
     needs: build-webapps
-    runs-on: ${{ matrix.runner }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          # macOS Apple Silicon (ARM64)
-          - platform: macos-arm64
-            runner: macos-14
-            rust_target: "aarch64-apple-darwin"
-            daemon_target: "aarch64-apple-darwin"
-            args: "--target aarch64-apple-darwin"
-
-          # macOS Intel (AMD64)
-          - platform: macos-amd64
-            runner: macos-14
-            rust_target: "x86_64-apple-darwin"
-            daemon_target: "x86_64-apple-darwin"
-            args: "--target x86_64-apple-darwin"
-
-          # Linux AMD64
-          - platform: linux
-            runner: ubuntu-22.04
-            rust_target: "x86_64-unknown-linux-gnu"
-            daemon_target: "x86_64-unknown-linux-gnu"
-            args: ""
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -239,29 +214,6 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/v}
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Download webapp artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: webapps
-          path: webapps/
-
-      - name: Verify webapp artifacts (Unix)
-        if: matrix.platform != 'windows'
-        run: |
-          echo "Checking webapp artifacts..."
-          ls -la webapps/
-          ls -la webapps/dashboard/dist/ || echo "Dashboard dist not found"
-          ls -la webapps/exit-node-portal/dist/ || echo "Portal dist not found"
-
-      - name: Verify webapp artifacts (Windows)
-        if: matrix.platform == 'windows'
-        shell: pwsh
-        run: |
-          Write-Host "Checking webapp artifacts..."
-          Get-ChildItem -Path webapps -Recurse | Select-Object -First 20
-          if (Test-Path webapps/dashboard/dist) { Get-ChildItem webapps/dashboard/dist } else { Write-Host "Dashboard dist not found" }
-          if (Test-Path webapps/exit-node-portal/dist) { Get-ChildItem webapps/exit-node-portal/dist } else { Write-Host "Portal dist not found" }
-
       - name: Install Bun
         uses: oven-sh/setup-bun@v2
         with:
@@ -271,89 +223,52 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
-          targets: ${{ matrix.rust_target }}
+          targets: x86_64-pc-windows-msvc
 
-      # Linux dependencies for Tauri
-      - name: Install Linux dependencies
-        if: matrix.platform == 'linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libappindicator3-dev \
-            librsvg2-dev \
-            patchelf
-
-      # Cache Rust dependencies
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
         with:
-          shared-key: "tauri-${{ matrix.platform }}"
+          shared-key: "tauri-windows"
           cache-targets: true
           cache-on-failure: true
 
-      # Build the daemon binary for bundling
-      - name: Build daemon binary (Unix)
-        if: matrix.platform != 'windows'
+      # Build the daemon binary for Windows
+      - name: Build daemon binary
         env:
           LOCALUP_VERSION: ${{ steps.get_version.outputs.VERSION }}
+        shell: pwsh
         run: |
-          mkdir -p apps/localup-desktop/src-tauri/binaries
-          cargo build --release --target ${{ matrix.daemon_target }} -p localup-cli
-          cp "target/${{ matrix.daemon_target }}/release/localup" \
-             "apps/localup-desktop/src-tauri/binaries/localup-daemon-${{ matrix.daemon_target }}"
-          ls -la apps/localup-desktop/src-tauri/binaries/
+          cargo build --release --target x86_64-pc-windows-msvc -p localup-desktop --bin localup-daemon
 
-      # Install frontend dependencies
+          # Create sidecar directory
+          New-Item -ItemType Directory -Force -Path apps/localup-desktop/src-tauri/binaries
+
+          # Copy daemon to sidecar location with target triple suffix
+          Copy-Item target/x86_64-pc-windows-msvc/release/localup-daemon.exe `
+            apps/localup-desktop/src-tauri/binaries/localup-daemon-x86_64-pc-windows-msvc.exe
+
+      # Install frontend dependencies and build
       - name: Install frontend dependencies
         working-directory: apps/localup-desktop
         run: bun install
 
-      # Update version in tauri.conf.json
-      - name: Update Tauri version
-        shell: bash
-        run: |
-          cd apps/localup-desktop/src-tauri
-          # Update version in tauri.conf.json
-          if [[ "$RUNNER_OS" == "macOS" ]]; then
-            sed -i '' "s/\"version\": \"[^\"]*\"/\"version\": \"${{ steps.get_version.outputs.VERSION }}\"/" tauri.conf.json
-          else
-            sed -i "s/\"version\": \"[^\"]*\"/\"version\": \"${{ steps.get_version.outputs.VERSION }}\"/" tauri.conf.json
-          fi
-          cat tauri.conf.json | grep version
-
-      # Build Tauri app
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LOCALUP_VERSION: ${{ steps.get_version.outputs.VERSION }}
-          # macOS signing (optional - requires secrets)
-          # APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          # APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          # APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          # APPLE_ID: ${{ secrets.APPLE_ID }}
-          # APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          # APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           projectPath: apps/localup-desktop
-          args: ${{ matrix.args }}
+          tauriScript: bunx tauri
 
-      # Upload artifacts
       - name: Upload Tauri artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tauri-${{ matrix.platform }}
+          name: tauri-windows
           path: |
-            apps/localup-desktop/src-tauri/target/release/bundle/**/*.dmg
-            apps/localup-desktop/src-tauri/target/release/bundle/**/*.app
-            apps/localup-desktop/src-tauri/target/release/bundle/**/*.deb
-            apps/localup-desktop/src-tauri/target/release/bundle/**/*.AppImage
-            apps/localup-desktop/src-tauri/target/release/bundle/**/*.rpm
-            apps/localup-desktop/src-tauri/target/aarch64-apple-darwin/release/bundle/**/*.dmg
-            apps/localup-desktop/src-tauri/target/aarch64-apple-darwin/release/bundle/**/*.app
-            apps/localup-desktop/src-tauri/target/x86_64-apple-darwin/release/bundle/**/*.dmg
-            apps/localup-desktop/src-tauri/target/x86_64-apple-darwin/release/bundle/**/*.app
+            apps/localup-desktop/src-tauri/target/release/bundle/msi/*.msi
+            apps/localup-desktop/src-tauri/target/release/bundle/nsis/*.exe
           retention-days: 1
 
   # Create GitHub Release with all artifacts
@@ -379,12 +294,10 @@ jobs:
           find artifacts/ -type f \( -name "*.tar.gz" -o -name "*.zip" -o -name "checksums-*.txt" \) \
             -exec cp {} release/ \;
 
-          # Desktop app installers (macOS and Linux only)
+          # Desktop app installers (Windows only)
           find artifacts/tauri-* -type f \( \
-            -name "*.dmg" -o \
-            -name "*.deb" -o \
-            -name "*.AppImage" -o \
-            -name "*.rpm" \
+            -name "*.msi" -o \
+            -name "*.exe" \
           \) -exec cp {} release/ \; 2>/dev/null || true
 
           # Create a combined checksums file
@@ -393,8 +306,8 @@ jobs:
             cat checksums-*.txt > SHA256SUMS.txt
           fi
 
-          # Add checksums for desktop apps
-          for f in *.dmg *.deb *.AppImage *.rpm; do
+          # Add checksums for Windows desktop app
+          for f in *.msi *.exe; do
             if [ -f "$f" ]; then
               shasum -a 256 "$f" >> SHA256SUMS.txt
             fi
@@ -446,18 +359,12 @@ jobs:
             ${{ steps.get_version.outputs.IS_PRERELEASE == 'false' && 'brew install localup' || '' }}
             ```
 
-            ## Desktop App
+            ## Desktop App (Windows)
 
-            Download the LocalUp Desktop app for your platform:
+            Download the LocalUp Desktop app:
 
-            ### macOS
-            - **Apple Silicon (M1/M2/M3)**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_aarch64.dmg`
-            - **Intel**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_x64.dmg`
-
-            ### Linux
-            - **Debian/Ubuntu**: `local-up_${{ steps.get_version.outputs.VERSION }}_amd64.deb`
-            - **AppImage**: `local-up_${{ steps.get_version.outputs.VERSION }}_amd64.AppImage`
-            - **RPM (Fedora/RHEL)**: `local-up-${{ steps.get_version.outputs.VERSION }}-1.x86_64.rpm`
+            - **MSI Installer**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_x64_en-US.msi`
+            - **EXE Installer**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_x64-setup.exe`
 
             ---
 
@@ -508,10 +415,8 @@ jobs:
           files: |
             release/*.tar.gz
             release/*.zip
-            release/*.dmg
-            release/*.deb
-            release/*.AppImage
-            release/*.rpm
+            release/*.msi
+            release/*.exe
             release/checksums-*.txt
             release/SHA256SUMS.txt
         env:
