--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,10 @@ http-body-util = "0.1"
 # QUIC
 quinn = "0.11"
 
+# HTTP/3 (h3-quinn 0.0.10+ supports quinn 0.11)
+h3 = "0.0.8"
+h3-quinn = "0.0.10"
+
 # TLS
 rustls = { version = "0.23", features = ["ring"] }
 tokio-rustls = "0.26"
