--- a/crates/localup-server-https/Cargo.toml
+++ b/crates/localup-server-https/Cargo.toml
@@ -16,10 +16,8 @@ localup-relay-db = { path = "../localup-relay-db" }
 localup-http-auth = { path = "../localup-http-auth" }
 tokio = { workspace = true }
 tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
-rustls = { version = "0.23", default-features = false, features = ["ring"] }
+rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 rustls-pemfile = "2.1"
-hyper = { workspace = true }
-http = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 rand = "0.8"
