--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,13 +87,6 @@ jobs:
             archive_name: macos-arm64
             strip: strip
 
-          # Windows AMD64
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-            archive_name: windows-amd64
-            extension: .exe
-            strip: ""  # Windows doesn't use strip
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -153,15 +146,13 @@ jobs:
         run: |
           cargo build --release --target ${{ matrix.target }} -p localup-cli
 
-      # Strip binaries (Unix only)
-      - name: Strip binaries (Unix)
-        if: runner.os != 'Windows'
+      # Strip binaries
+      - name: Strip binaries
         run: |
           ${{ matrix.strip }} target/${{ matrix.target }}/release/localup
 
-      # Create archives (Unix - tar.gz)
-      - name: Create release archives (Unix)
-        if: runner.os != 'Windows'
+      # Create release archives (tar.gz)
+      - name: Create release archives
         run: |
           mkdir -p release
 
@@ -173,23 +164,6 @@ jobs:
           cd release
           shasum -a 256 *.tar.gz > checksums-${{ matrix.archive_name }}.txt
 
-      # Create archives (Windows - zip)
-      - name: Create release archives (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          New-Item -ItemType Directory -Force -Path release
-
-          # Package localup CLI
-          Compress-Archive -Path target/${{ matrix.target }}/release/localup.exe `
-            -DestinationPath release/localup-${{ matrix.archive_name }}.zip
-
-          # Create checksums
-          cd release
-          Get-FileHash *.zip -Algorithm SHA256 | `
-            ForEach-Object { "$($_.Hash.ToLower())  $($_.Path.Split('\')[-1])" } | `
-            Out-File -Encoding ASCII checksums-${{ matrix.archive_name }}.txt
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -197,84 +171,10 @@ jobs:
           path: release/*
           retention-days: 1
 
-  # Build Tauri desktop app (Windows only)
-  build-tauri:
-    name: Build Desktop App (Windows)
-    needs: build-webapps
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Extract version from tag
-        id: get_version
-        shell: bash
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-          targets: x86_64-pc-windows-msvc
-
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: "tauri-windows"
-          cache-targets: true
-          cache-on-failure: true
-
-      # Build the daemon binary for Windows
-      - name: Build daemon binary
-        env:
-          LOCALUP_VERSION: ${{ steps.get_version.outputs.VERSION }}
-        shell: pwsh
-        run: |
-          cargo build --release --target x86_64-pc-windows-msvc -p localup-desktop --bin localup-daemon
-
-          # Create sidecar directory
-          New-Item -ItemType Directory -Force -Path apps/localup-desktop/src-tauri/binaries
-
-          # Copy daemon to sidecar location with target triple suffix
-          Copy-Item target/x86_64-pc-windows-msvc/release/localup-daemon.exe `
-            apps/localup-desktop/src-tauri/binaries/localup-daemon-x86_64-pc-windows-msvc.exe
-
-      # Install frontend dependencies and build
-      - name: Install frontend dependencies
-        working-directory: apps/localup-desktop
-        run: bun install
-
-      - name: Build Tauri app
-        uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
-        with:
-          projectPath: apps/localup-desktop
-          tauriScript: bunx tauri
-
-      - name: Upload Tauri artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tauri-windows
-          path: |
-            apps/localup-desktop/src-tauri/target/release/bundle/msi/*.msi
-            apps/localup-desktop/src-tauri/target/release/bundle/nsis/*.exe
-          retention-days: 1
-
   # Create GitHub Release with all artifacts
   create-release:
     name: Create GitHub Release
-    needs: [build-binaries, build-tauri]
+    needs: [build-binaries]
     runs-on: ubuntu-latest
 
     steps:
@@ -291,27 +191,14 @@ jobs:
           mkdir -p release
 
           # CLI binaries
-          find artifacts/ -type f \( -name "*.tar.gz" -o -name "*.zip" -o -name "checksums-*.txt" \) \
+          find artifacts/ -type f \( -name "*.tar.gz" -o -name "checksums-*.txt" \) \
             -exec cp {} release/ \;
-
-          # Desktop app installers (Windows only)
-          find artifacts/tauri-* -type f \( \
-            -name "*.msi" -o \
-            -name "*.exe" \
-          \) -exec cp {} release/ \; 2>/dev/null || true
 
           # Create a combined checksums file
           cd release
           if ls checksums-*.txt 1> /dev/null 2>&1; then
             cat checksums-*.txt > SHA256SUMS.txt
           fi
-
-          # Add checksums for Windows desktop app
-          for f in *.msi *.exe; do
-            if [ -f "$f" ]; then
-              shasum -a 256 "$f" >> SHA256SUMS.txt
-            fi
-          done
 
           cd ..
           ls -lah release/
@@ -359,13 +246,6 @@ jobs:
             ${{ steps.get_version.outputs.IS_PRERELEASE == 'false' && 'brew install localup' || '' }}
             ```
 
-            ## Desktop App (Windows)
-
-            Download the LocalUp Desktop app:
-
-            - **MSI Installer**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_x64_en-US.msi`
-            - **EXE Installer**: `LocalUp_${{ steps.get_version.outputs.VERSION }}_x64-setup.exe`
-
             ---
 
             ## CLI Tool
@@ -380,9 +260,6 @@ jobs:
             - **Intel (AMD64)**: `localup-macos-amd64.tar.gz`
             - **Apple Silicon (ARM64)**: `localup-macos-arm64.tar.gz`
 
-            ### Windows
-            - **AMD64**: `localup-windows-amd64.zip`
-
             ---
 
             ### Verify Downloads
@@ -390,7 +267,6 @@ jobs:
             All archives include SHA256 checksums. Verify your download:
 
             ```bash
-            # Unix
             sha256sum -c checksums-<platform>.txt
 
             # Or check against combined checksums
@@ -400,23 +276,13 @@ jobs:
 
             ### Extract and Install
 
-            **Unix (Linux/macOS)**:
             ```bash
             tar -xzf localup-<platform>-<arch>.tar.gz
             sudo mv localup /usr/local/bin/
             chmod +x /usr/local/bin/localup
             ```
-
-            **Windows**:
-            ```powershell
-            Expand-Archive localup-windows-amd64.zip -DestinationPath .
-            # Add to PATH or move to desired location
-            ```
           files: |
             release/*.tar.gz
-            release/*.zip
-            release/*.msi
-            release/*.exe
             release/checksums-*.txt
             release/SHA256SUMS.txt
         env:
