--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -231,7 +231,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             libwebkit2gtk-4.1-dev \
-            libappindicator3-dev \
             librsvg2-dev \
             patchelf \
             libssl-dev \
@@ -254,50 +253,65 @@ jobs:
             -p localup-desktop --bin localup-daemon
 
           # Copy daemon binary to Tauri binaries directory with correct naming
+          # Tauri looks for binaries relative to src-tauri directory
           mkdir -p apps/localup-desktop/src-tauri/binaries
           cp target/${{ matrix.daemon_target }}/release/localup-daemon \
             apps/localup-desktop/src-tauri/binaries/localup-daemon-${{ matrix.daemon_target }}
 
-      # Install frontend dependencies
+          # Verify the binary exists
+          ls -la apps/localup-desktop/src-tauri/binaries/
+
+      # Install frontend dependencies and build frontend
       - name: Install frontend dependencies
         working-directory: apps/localup-desktop
-        run: bun install
+        run: |
+          bun install
+          bun run build
 
-      # Build Tauri app
+      # Build Tauri app manually (more control than tauri-action)
       - name: Build Tauri app
-        uses: tauri-apps/tauri-action@v0
+        working-directory: apps/localup-desktop
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LOCALUP_VERSION: ${{ steps.get_version.outputs.VERSION }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
-        with:
-          projectPath: apps/localup-desktop
-          tauriScript: bun run tauri
-          args: --target ${{ matrix.target }} --bundles ${{ matrix.bundle_targets }}
+        run: |
+          # Verify daemon binary exists before building
+          echo "Checking for daemon binary..."
+          ls -la src-tauri/binaries/
+
+          # Build Tauri app
+          bun run tauri build --target ${{ matrix.target }} --bundles ${{ matrix.bundle_targets }}
 
       # Collect and rename artifacts for upload
       - name: Collect artifacts
         run: |
           mkdir -p release
 
+          # Find where Tauri put the bundles (workspace target or local target)
+          BUNDLE_DIR="target/${{ matrix.target }}/release/bundle"
+          if [ ! -d "$BUNDLE_DIR" ]; then
+            BUNDLE_DIR="apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle"
+          fi
+
+          echo "Looking for bundles in: $BUNDLE_DIR"
+          ls -la "$BUNDLE_DIR" 2>/dev/null || echo "Bundle dir not found"
+
           # macOS DMG
-          if [ -f "apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/dmg/"*.dmg ]; then
-            for f in apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg; do
+          if ls "$BUNDLE_DIR/dmg/"*.dmg 1> /dev/null 2>&1; then
+            for f in "$BUNDLE_DIR/dmg/"*.dmg; do
               cp "$f" "release/LocalUp-${{ matrix.platform }}.dmg"
             done
           fi
 
           # Linux AppImage
-          if [ -f "apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/appimage/"*.AppImage ]; then
-            for f in apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage; do
+          if ls "$BUNDLE_DIR/appimage/"*.AppImage 1> /dev/null 2>&1; then
+            for f in "$BUNDLE_DIR/appimage/"*.AppImage; do
               cp "$f" "release/LocalUp-${{ matrix.platform }}.AppImage"
             done
           fi
 
           # Linux deb
-          if [ -f "apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/deb/"*.deb ]; then
-            for f in apps/localup-desktop/src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb; do
+          if ls "$BUNDLE_DIR/deb/"*.deb 1> /dev/null 2>&1; then
+            for f in "$BUNDLE_DIR/deb/"*.deb; do
               cp "$f" "release/LocalUp-${{ matrix.platform }}.deb"
             done
           fi
