Wildcard domain tunnels (vibe-kanban c5e2f31c)
I want to be able to set up custom wildcard domain tunnels by provisioning a custom domain and when doing http tunnel specifying the wildcard domain just provisioned

make tests and also test let's encrypt integration with a mock server using testcontianers

--- a/crates/localup-api/Cargo.toml
+++ b/crates/localup-api/Cargo.toml
@@ -13,6 +13,7 @@ localup-proto = { path = "../localup-proto", features = ["openapi"] }
 localup-auth = { path = "../localup-auth" }
 localup-relay-db = { path = "../localup-relay-db" }
 localup-cert = { path = "../localup-cert" }
+localup-router = { path = "../localup-router" }
 
 # Web framework
 axum = { workspace = true }
