--- a/crates/localup-cert/Cargo.toml
+++ b/crates/localup-cert/Cargo.toml
@@ -34,3 +34,7 @@ base64 = "0.22"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
+testcontainers = "0.23"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
+# Enable ring for Rustls crypto in tests
+rustls = { workspace = true, features = ["ring"] }
