--- a/apps/localup-desktop/src-tauri/Cargo.toml
+++ b/apps/localup-desktop/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 tauri-plugin-autostart = "2"
+tauri-plugin-updater = "2"
 
 # LocalUp integration
 localup-lib = { path = "../../../crates/localup-lib", default-features = false }
