feat(tls): Add TLS/SNI passthrough support with metrics tracking
- Introduced a new relay-tls target in the Makefile for starting a TLS/SNI passthrough relay.
- Enhanced TlsServer to track connection metrics, including bytes received and sent, and store them in a database.
- Added support for generating TLS certificates and starting TLS echo and HTTPS test servers.
- Updated Cargo.toml to include new dependencies for database and metrics tracking.
- Improved logging for TLS connections, including detailed information on connection status and metrics.

--- a/crates/localup-server-tls/Cargo.toml
+++ b/crates/localup-server-tls/Cargo.toml
@@ -12,11 +12,15 @@ localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
 localup-control = { path = "../localup-control" }
 localup-cert = { path = "../localup-cert" }
+localup-relay-db = { path = "../localup-relay-db" }
 tokio = { workspace = true }
 tokio-rustls = { workspace = true }
 rustls = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+sea-orm = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
