--- a/crates/localup-cli/Cargo.toml
+++ b/crates/localup-cli/Cargo.toml
@@ -44,6 +44,7 @@ uuid = { version = "1.0", features = ["v4"] }
 ipnetwork = "0.20"
 chrono = { workspace = true }
 sea-orm = { workspace = true }
+axum = { workspace = true }
 
 [build-dependencies]
 chrono = { workspace = true }
